<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/upload_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_banners"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_category"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_top_brands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_top_brands"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_expert_tips_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_expert_tips_url"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_website_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_website_url"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_category"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_banners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_banners"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_brands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_brands"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_trending"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_latest_product"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/show_best_product"
            android:textSize="20sp" />


        <Button
            android:id="@+id/update_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/update_ads_ids"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>