<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/top_brands"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ok_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ok_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="120sp"
                        android:layout_height="120sp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/item_bg"
                        android:contentDescription="@string/todo"
                        android:elevation="8dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <ImageView
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="150sp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/item_bg"
                        android:contentDescription="@string/todo"
                        android:elevation="8dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/you_can_add_products_in_this_category"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/treanding_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_tranding_product" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/best_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/best_product" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/latest_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_latest_product" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_title"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/compress_Btn">

                        <EditText
                            android:id="@+id/titleTv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:inputType="textUri"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayou"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_buying_guide_hindi"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/compress_Btn">

                        <EditText
                            android:id="@+id/buying_guide_hindi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:gravity="start"
                            android:inputType="textMultiLine|textLongMessage"
                            android:minWidth="390dp"
                            android:minHeight="200dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayou1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_buying_guide_english"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/compress_Btn">

                        <EditText
                            android:id="@+id/buying_guide_english"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:gravity="start"
                            android:inputType="textMultiLine|textLongMessage"
                            android:minWidth="390dp"
                            android:minHeight="200dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_rating_in_hindi"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/compress_Btn">

                        <EditText
                            android:id="@+id/enter_rating_in_hindi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:gravity="start"
                            android:inputType="textMultiLine|textLongMessage"
                            android:minWidth="390dp"
                            android:minHeight="200dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout4"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_rating_in_english"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/compress_Btn">

                        <EditText
                            android:id="@+id/enter_rating_in_english"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:gravity="start"
                            android:inputType="textMultiLine|textLongMessage"
                            android:minWidth="390dp"
                            android:minHeight="200dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>